# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-2.0.3 (20 Jun 2002)

  20 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed two typos
  pointed out by stroke and g2boojum.  These fix unmerge and some aspect of
  virtuals handling, which was previously causing a traceback.
  
  19 Jun 2002; Daniel Robbins <drobbins@gentoo.org> emerge: emerge -eup world
  now will ignore world entries if it isn't really installed locally; in 2.0.1,
  --emptytree would auto-enable all world entries, leading to inconsistent
  package lists between --emptytree and without.

*portage-2.0.2 (19 Jun 2002)

  19 Jun 2002; Daniel Robbins <drobbins@gentoo.org> make.conf.ppc,
  make.globals.ppc: integrated these files into our sources.
  
  19 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed a bug
  where ROOT="" would not get properly converted to ROOT="/".
  
  18 Jun 2002; Daniel Robbins <drobbins@gentoo.org> emerge: Portage 2.0+ has
  fixed "!" depend matching support, but some code in emerge was designed to
  anticipate the incorrect behavior.  This emerge code has been fixed to work
  correctly.  This closes my part of bug #3834.
  
  18 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: fixed
  bug #2444, where emerge fails when "--emptytree" and "--onlydeps" are used at
  the same time.
  
  18 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: new
  fakedbapi for doing emptytree calculations; emptytree upgrades in emerge.
  "emerge -upe world" now works correctly, accounting for items in the world
  profile.  Yay!  Bugs #3832 and #1911 fixed.
  
  18 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge:
  Integrated new aux_get() method into our portdbapi.  aux_get() provides a
  standardized way to get cached information about ebuilds, and is now fully
  integrated into Portage and emerge search.
